<resources>
    <string name="app_name">Muhteşem Hayvanlar</string>

    <string name="lipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis maximus eros. Praesent finibus vel nisl volutpat interdum. Maecenas dapibus molestie consequat. Vivamus scelerisque metus ac dolor ullamcorper, in blandit tellus ullamcorper. Quisque varius lacus a mauris ullamcorper tristique. Aliquam nec odio pellentesque, pulvinar purus porttitor, congue eros. Suspendisse potenti. Nullam nec nulla et est aliquet viverra et non nisl. Etiam viverra consectetur mauris in viverra.</string>
    <string name="warning">Uyarı</string>
    <string name="there_is_a_problem">Bir sorun oluştu!</string>
    <string name="error">Hata</string>
    <string name="ok">Tamam</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="cancel">İptal</string>
    <string name="start">Başla</string>
    <string name="pause">Durdur</string>
    <string name="contiune">Devam Et</string>
    <string name="perfect">Mükemmel!</string>
    <string name="well_done">Tebrikler!</string>
    <string name="completed">Tamamlandı</string>
    <string name="try_again">Tekrar Dene</string>
    <string name="loading">Yükleniyor…</string>
    <string name="download">İndir</string>
    <string name="downloading">İndiriliyor…</string>
    <string name="contiune_to_read">Okumaya Devam Et</string>
    <string name="update">Güncelle</string>
    <string name="read">Oku</string>
    <string name="quick_search">Hızlı arama…</string>


    <string name="open_the_book">Kitabı Aç</string>
    <string name="open_this_book">Kitap açılsın mı?</string>
    <string name="download_this_book">Bu kitap indirilsin mi?</string>
    <string name="book_downloaded">Kitap indirildi :)</string>

    <string name="network_connection_error_title">İnternet Bağlantı Hatası</string>
    <string name="network_connection_error_message">İnternet bağlantısı olmadığı için şu anda işleme devam edilemiyor. Yeniden denemek ister misiniz?</string>
    <string name="go_to_settings">Ayarlara Git</string>

    <string name="cant_read_files_without_permission">İzin verilmediği için dosyalar okunamıyor. Lütfen izni onaylayın.</string>

    <string name="cant_download_book_without_permission">İzin verilmediği için kitap indirilemiyor.\nLütfen izni onaylayın.</string>
    <string name="book_is_preparing">Kitap hazırlanıyor…</string>
    <string name="book_could_not_prepared">Kitap hazırlanamadı!</string>
    <string name="book_could_not_downloaded">Kitap indirilemedi!</string>
    <string name="book_data_could_not_fetched">Kitap detayları getirilemedi!</string>
    <string name="next_page">Sonraki Sayfa</string>
    <string name="prev_page">Önceki Sayfa</string>
    <string name="exit">Çıkış</string>
    <string name="prev_icon" translatable="false"><![CDATA[<]]></string>
    <string name="next_icon" translatable="false"><![CDATA[>]]></string>
    <string name="are_you_sure">Emin Misiniz?</string>
    <string name="are_you_sure_exit_to_book">Kitabı kapatmak istediğinize emin misiniz?</string>
    <string name="close_book">Kitabı Kapat</string>
    <string name="books">Kitaplar</string>
    <string name="pages">Sayfa</string>
</resources>