<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_dialog_background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:letterSpacing=".1"
            android:text="@string/warning"
            android:textColor="@color/primary"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:letterSpacing=".1"
            android:text="@string/lipsum"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialogNegativeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing=".1"
                android:maxLines="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:backgroundTint="@android:color/holo_orange_dark" />

            <View
                android:layout_width="16dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/dialogPossitiveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing=".1"
                android:maxLines="1"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>