<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="awesome.animals.koala.prensentation.view.activity.BookActivity" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".prensentation.view.activity.BookActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:userInputEnabled="@{false}" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/background"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgExit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/exit"
                    android:src="@drawable/ic_close" />
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/background"
                app:cardCornerRadius="50dp"
                app:cardElevation="6dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgMute"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/exit"
                    android:src="@drawable/ic_music_off" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <FrameLayout
            android:id="@+id/frmButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/background"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="6dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgPrevPage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/prev_page"
                        android:src="@drawable/ic_left" />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/nexButton"
                    app:cardCornerRadius="60dp"
                    app:cardElevation="6dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgNextPage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/next_page"
                        android:src="@drawable/ic_right"
                        app:tint="@color/white" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>

</layout>
